Fix alignment in login form, and add base color palette to style.css

--- a/web/public/css/form_signin.css
+++ b/web/public/css/form_signin.css
@@ -4,24 +4,59 @@ body {
 }
 
 body {
-    display: -ms-flexbox;
     display: flex;
-    -ms-flex-align: center;
     align-items: center;
     padding-top: 40px;
     padding-bottom: 40px;
     background-color: #f5f5f5;
 }
 
-.form-signin {
-    width: 100%;
-    max-width: 330px;
-    padding: 15px;
-    margin: auto;
+#header{
+    color:#512DA8;
 }
+
+#form-container{
+    width:100%;
+    max-width:350px;
+    padding:20px 0;
+    margin: 0 auto;
+    display:flex;
+    flex-wrap:wrap;
+    /*outline:1px solid red;*/
+    align-items:center;
+    justify-content:center;
+}
+
+.form-signin {
+    width: 80%;
+    /*max-width: 330px;*/
+    padding: 25px;
+    border: 2px solid #512DA8;
+    border-radius:10px;
+}
+
+#login-button{
+    background-color: #7c4dff;
+}
+
+#register-button{
+    width:65%;
+    /*max-width:80%;*/
+    align-items:center;
+    justify-content:center;
+    /*flex:1;*/
+    margin:10px;
+    color:white;
+    background-color:#7c4dff;
+}
+
+/* 'Remember me' checkbox */
 .form-signin .checkbox {
     font-weight: 400;
+    padding:5px;
 }
+
+
 .form-signin .form-control {
     position: relative;
     box-sizing: border-box;
